-
Bug
-
Resolution: Fixed
-
Minor
-
Upstream, Lustre 2.15.0
-
None
-
3
-
9223372036854775807
Trace:
PID: 622621 TASK: ffff89d05b2117c0 CPU: 1 COMMAND: "ll_imp_inval"
#0 [ffff89d04d307b70] panic at ffffffff860af786
/tmp/kernel/kernel/panic.c: 299
#1 [ffff89d04d307c00] ll_md_blocking_ast at ffffffffc1919052 [lustre]
/home/lustre/master-mine/lustre/llite/namei.c: 388
#2 [ffff89d04d307c60] ldlm_cancel_callback at ffffffffc0fc074c [ptlrpc]
/home/lustre/master-mine/lustre/ptlrpc/../../lustre/ldlm/ldlm_lock.c: 2445
#3 [ffff89d04d307cb0] ldlm_cli_cancel_local at ffffffffc0fd8ce6 [ptlrpc]
/home/lustre/master-mine/lustre/ptlrpc/../../lustre/ldlm/ldlm_request.c: 1244
#4 [ffff89d04d307cd0] ldlm_cli_cancel at ffffffffc0fde6a8 [ptlrpc]
/home/lustre/master-mine/lustre/ptlrpc/../../lustre/ldlm/ldlm_request.c: 1569
#5 [ffff89d04d307d30] cleanup_resource_queue at ffffffffc0fc278c [ptlrpc]
/home/lustre/master-mine/lustre/ptlrpc/../../lustre/ldlm/ldlm_resource.c: 1091
#6 [ffff89d04d307d80] ldlm_resource_cleanup at ffffffffc0fc2914 [ptlrpc]
/home/lustre/master-mine/lustre/ptlrpc/../../lustre/ldlm/ldlm_resource.c: 1106
#7 [ffff89d04d307d98] ldlm_resource_clean_hash at ffffffffc0fc294c [ptlrpc]
/home/lustre/master-mine/lustre/ptlrpc/../../lustre/ldlm/ldlm_resource.c: 1119
#8 [ffff89d04d307da8] cfs_hash_for_each_relax at ffffffffc0b39cc5 [libcfs]
/home/lustre/master-mine/libcfs/libcfs/hash.c: 1644
#9 [ffff89d04d307e20] cfs_hash_for_each_nolock at ffffffffc0b3d40f [libcfs]
/home/lustre/master-mine/libcfs/include/libcfs/libcfs_hash.h: 402
#10 [ffff89d04d307e48] ldlm_namespace_cleanup at ffffffffc0fc2ce6 [ptlrpc]
/home/lustre/master-mine/lustre/ptlrpc/../../lustre/ldlm/ldlm_resource.c: 1163
#11 [ffff89d04d307e60] mdc_import_event at ffffffffc13456f6 [mdc]
/home/lustre/master-mine/lustre/mdc/mdc_request.c: 2712
#12 [ffff89d04d307e90] ptlrpc_invalidate_import at ffffffffc102460d [ptlrpc]
/home/lustre/master-mine/libcfs/include/libcfs/libcfs_debug.h: 154
after adding an additional assertiong:
if ((bits & (MDS_INODELOCK_LOOKUP | MDS_INODELOCK_PERM))) {
LASSERT(inode);
LASSERT(inode->i_sb);
LASSERT(inode->i_sb->s_root);
}
it's:
LustreError: 622621:0:(namei.c:389:ll_lock_cancel_bits()) ASSERTION( inode->i_sb->s_root ) failed BUG: unable to handle kernel NULL pointer dereference at 0000000000000030
- is related to
-
LU-20501 sanityn test_102: ZFS check_fhandle_syscalls d102.sanityn.stripe/subdir fail, open_by_handle_at error: Stale file handle
-
- Open
-
-
LU-15305 sanityn test_109 crash: list_del corruption in class_del_profile()
-
- Resolved
-
- is related to
-
LU-15835 sanityn test_102: [20108.951589] WARNING: CPU: 1 PID: 722753 at fs/exportfs/expfs.c:96 reconnect_path+0x22b/0x2c0
-
- Resolved
-
-
LU-15842 sanityn test_102: access via mount point '/mnt/lustre2' - stat data mismatch between fopen and fhandle case
-
- Resolved
-
-
LU-6142 Enforce Linux kernel coding style in all code
-
- Open
-